--- a/assets/HTML/nossoprojeto.html
+++ b/assets/HTML/nossoprojeto.html
@@ -132,11 +132,11 @@
                     <div class="stat-label">Alunos Atendidos</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">32+</div>
+                    <div class="stat-number">38+</div>
                     <div class="stat-label">Anos de Atuação</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">8</div>
+                    <div class="stat-number">15</div>
                     <div class="stat-label">Instrutores Qualificados</div>
                 </div>
                 <div class="stat-card">
@@ -172,7 +172,7 @@
                 </div>
                 
                 <div class="program-card">
-                    <img src="../search_images/sM2XGxLyX56d.jpg" alt="Capoeira Juvenil" class="program-img">
+                    <img src="../img/capoeira juvenil 1.jpg" alt="Capoeira Juvenil" class="program-img">
                     <div class="program-content">
                         <h4>Capoeira Juvenil</h4>
                         <p>Direcionado para adolescentes e jovens adultos, com foco no desenvolvimento técnico e liderança comunitária.</p>
@@ -186,7 +186,7 @@
                 </div>
                 
                 <div class="program-card">
-                    <img src="../search_images/ACcChRXtRm1M.jpg" alt="Capoeira Adulto" class="program-img">
+                    <img src="../img/grupo fumaca8.jpg" alt="Capoeira Adulto" class="program-img">
                     <div class="program-content">
                         <h4>Capoeira Adulto</h4>
                         <p>Para adultos que buscam atividade física, bem-estar e conexão com a cultura afro-brasileira.</p>
