--- a/assets/HTML/proposito.html
+++ b/assets/HTML/proposito.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="purpose-image">
-                    <img src="../search_images/tlbIsaZMiLZD.jpg" alt="Capoeira na Escola" class="purpose-img">
+                    <img src="../img/angelina bananeira ar-livre.jpg" alt="Capoeira na Escola" class="purpose-img">
                 </div>
             </div>
         </div>
