--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -150,18 +150,44 @@
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Itaueira</span>
+                            <span>Itaueira</span>                          
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
                             <ul>
-                                <li><strong>Infantil:</strong> Sextas, 14:00 - 15:00</li>
-                                <li><strong>Juvenil:</strong> Sextas, 15:00 - 16:30</li>
+                                <li><strong>Terça:</strong> 18:30 - 19:30 </li>
+                                <li><strong>Quarta:</strong>  18:30 - 19:30 </li>
+                                <li><strong>Quinta:</strong>  18:30 - 19:30 </li>
                             </ul>
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
                             <span>Instrutor: Mestre Paçoca</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="location-card">
+                    <div class="location-header">
+                        <h3>Unidade Piauí</h3>
+                        <span class="location-status active">Ativa</span>
+                    </div>
+                    <div class="location-body">
+                        <div class="location-address">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Canto do Buriti</span>                          
+                        </div>
+                        <div class="location-schedule">
+                            <h4>Horários das Aulas:</h4>
+                            <ul>
+                                <li><strong>Segunda:</strong>  19:00 - 20:00</li>
+                                <li><strong>Quarta:</strong> 19:00 - 20:00</li>
+                                <li><strong>Sextas:</strong> 19:00 - 20:00</li>
+                            </ul>
+                        </div>
+                        <div class="location-instructor">
+                            <i class="fas fa-user"></i>
+                            <span>Instrutor: Professor Esporão </span>
                         </div>
                     </div>
                 </div>
@@ -174,13 +200,13 @@
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Núcleo Bandeirante</span>
+                            <span>Núcleo Bandeirante, divinéia</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
                             <ul>
-                                <li><strong>Adulto:</strong> Sábados, 09:00 - 11:00</li>
-                                <li><strong>Roda Livre:</strong> Domingos, 15:00 - 17:00</li>
+                                <li><strong>Quarta:</strong> 19:00</li>
+                                <li><strong>Quarta:</strong> 19:00</li>
                             </ul>
                         </div>
                         <div class="location-instructor">
@@ -203,13 +229,14 @@
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
                             <ul>
-                                <li><strong>Adulto:</strong> Sábados, 09:00 - 11:00</li>
-                                <li><strong>Roda Livre:</strong> Domingos, 15:00 - 17:00</li>
+                                <li><strong>Segunda:</strong> 19:00</li>
+                                <li><strong>Quarta:</strong>  19:00</li>
+                                <li><strong>Sexta:</strong>  19:00</li>
                             </ul>
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
-                            <span>Instrutor: Professor Sérgio</span>
+                            <span>Instrutor: Professor Pica-Pau</span>
                         </div>
                     </div>
                 </div>
@@ -222,7 +249,7 @@
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Águas Claras</span>
+                            <span>Areal</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
@@ -234,6 +261,30 @@
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
                             <span>Instrutor: Professor Zé Durinho</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="location-card">
+                    <div class="location-header">
+                        <h3>Unidade Brasília - DF</h3>
+                        <span class="location-status active">Ativa</span>
+                    </div>
+                    <div class="location-body">
+                        <div class="location-address">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Alexânia</span>
+                        </div>
+                        <div class="location-schedule">
+                            <h4>Horários das Aulas:</h4>
+                            <ul>
+                                <li><strong>Terça:</strong> 19:30 - 21:00</li>
+                                <li><strong>Quinta:</strong> 19:30 - 21:00</li>
+                            </ul>
+                        </div>
+                        <div class="location-instructor">
+                            <i class="fas fa-user"></i>
+                            <span>Instrutor: Professor Laércio</span>
                         </div>
                     </div>
                 </div>
@@ -323,7 +374,7 @@
                 </div>
                 
                 <div class="directions-image">
-                    <img src="../search_images/p8iUXwxFLgq4.webp" alt="Localização" class="directions-img">
+                    <img src="../img/grupo fumaca9 Big.jpg" alt="Localização" class="directions-img">
                 </div>
             </div>
         </div>
